fix z-index of preview_bar edit button
• make it lower than the ui-dialog

--- a/web/css/preview/preview-default.styl
+++ b/web/css/preview/preview-default.styl
@@ -45,7 +45,7 @@ div.ui-widget-content
 .preview_bar
 	display block
 	position absolute
-	z-index 1001
+	z-index 999
 	.ui-icon
 		margin-right 1px
 		margin-top 1px
